Revision history for DBIx::Simple::Class

0.58    2012-02-22 00:50:18 EET
        - Added documentation for "delete"
        - fixed potential bug with pre-set primary key
        - No warnings from Params::Check in tests anymore
        - Moved POD to Checks.pod for easier spellchecking. Spellcheck.
        
0.57    2012-02-20 16:28:56 EET
        - Happy birthday to me! This release is my present for my self and everyone else!
        - Fixed new_from_dbix_simple to be context aware
        - Added find() alias for select_by_pk()
        - Added SQL_LIMIT() custom SQL piece
        - $dbh->{RaiseError} ==1 by default
        - Added more tests
        - Updated README
        - BUILD_REQUIRES => {'DBD::SQLite' => '1.29'},
        - Overall test coverage 93.8%
0.56    2012-02-19 14:16:18 EET
        - Fixed bug:"my $SQL" declared twice
        - Optimised update() and insert() to use directly DBI
          instead of $dbix->query
        - Optimised new_from_dbix_simple  to use directly DBI 
          instead of $dbix->hash 
        - Got back to $class->dbix() instead of just dbix()
          to allow subclasses to override dbix()
        - Added new named queries (INSERT, UPDATE) to private $SQL 
          and used $SQL->{$class}{INSERT} in insert() for performance
        - Renamed BY_PK to SELECT_BY_PK named query.
        - Improved documentation
0.55    2012-02-18 17:22:30 EET
        - Added method for generating custom SQL
        - Added examples for using custom SQL
        - Added new method select_by_pk() for getting by PRIMARY_KEY
        - Added more tests
        - Added links to popular ORMs
        
0.54    2012-02-17 14:06:48 EET
        - Improved documentation
        - Fixed potential bug with PRIMARY_KEY quoting/definedness
        - Now we do not quote tablenames and columns
        - TODO: Find a common solution to the above - Patches wellcome!
        - Code optimisations.

0.53    2012-02-16 12:33:52 EET