@@ -5,6 +5,8 @@ Revision history for DBIx::Simple::Class
         - fixed potential bug with pre-set primary key
         - No warnings from Params::Check in tests anymore
         - Moved POD to Checks.pod for easier spellchecking. Spellcheck.
+        - Renamed _make_field_attrs() to BUILD() and added documentation,
+          thus allowing developers to inject their custom logic officially :).
         
 0.57    2012-02-20 16:28:56 EET
         - Happy birthday to me! This release is my present for my self and everyone else!
